syntax = "proto3";

package auth;



service AuthCheck {
    rpc verifyToken (TokenRequest) returns (TokenResult);
}


message TokenData {
    string id = 1;
    string name = 2;
    string email = 3;
    string picture = 4;
    string expires = 5;
}

message TokenRequest {
    string token = 1;
    bool checkTime = 2;
}

message TokenResult {
    bool isVerified = 1;
    TokenData data = 2;
}